--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+body { height: 100vh; }
+
+#root:focus-visible {
+  border: 0;
+  outline: 0;
+}
+
 #root {
-  max-width: 1280px;
+  /*max-width: 1280px;*/
   margin: 0 auto;
-  padding: 2rem;
+  height: 100%;
+  /*padding: 2rem;*/
   text-align: center;
 }
 
